# mlops-2025-sagemaker

./: Dockerfile  pyproject.toml  run_pipeline.sh
infrastructure/: batch_inference_pipeline.py  train_pipeline_multi_step.py  train_pipeline_multi_step_register.py  train_pipeline_single_step.py
pipelines/: inference_pipeline.sh  train_pipeline.sh
scripts/: evaluate.py  featurize.py  inference.py  predict.py  preprocess.py  train.py
