[project]
name = "mlops-2025-sagemaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "sagemaker==2.247.0",
    "scikit-learn>=1.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

